fdo#48442 fix default hori/vert frame anchor during RTF import

We used to send nothing when we got nothing, but this is not correct:
\pvmrg and \phmrg is the default in RTF, but not in Writer.

Change-Id: I9f69e282e68f0828c8b5ba98657cad1dd0715eb3